# epiphan-openav-bridge

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  ONBOARDING.md  README.md  SECURITY.md  init.sh
.claude/: PROJECT_CONTEXT.md  library.yaml
.claude/agents/: observer-full.md  observer-lite.md
.claude/evals/: observer-lite-eval.md
.claude/observers/: ALERTS.md  ARCH.md  QUALITY.md
.claude/programs/: ec20-api-discovery.md
.claude/rules/: coding.md
.github/workflows/: ci.yml
demo/: .env.example  DEPLOY-RPI5.md  README.md  docker-compose.override.yml  docker-compose.yml  generate-config.sh  test-generate-config.sh  test-stack.sh
demo/scheduler/: run-demo.sh  test-run-demo.sh
demo/system-configs/: smart-room-demo.json
openav-epiphan-ec20/: Dockerfile  README.md  ec20_curl_tests.sh  ec20_probe.sh  go.mod
openav-epiphan-ec20/source/: cgiauth.go  cgiauth_test.go  driver.go  driver_test.go  microservice.go  visca.go  visca_test.go
openav-epiphan-pearl/: Dockerfile  README.md  go.mod  go.sum  init-framework-mod.sh  pearl_curl_tests.sh
openav-epiphan-pearl/source/: driver.go  driver_test.go  microservice.go
openav-mcp/: DEMO.md  Dockerfile  LICENSE  README.md  pyproject.toml
openav-mcp/openav_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
openav-mcp/scripts/: demo_smart_room.py  roundtrip_demo.py
openav-mcp/tests/: test_openav_mcp.py
proof/: README.md  requirements.txt  rtsp_test.py  stream_analysis.md
