[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openav-mcp"
version = "0.1.0"
description = "MCP server face over the OpenAV↔Epiphan REST bridges — agentic AV control"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
openav-mcp = "openav_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["openav_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
